@startuml
!include style.puml
skinparam arrowThickness 1.1
skinparam arrowColor LOGIC_COLOR_T4
skinparam classBackgroundColor LOGIC_COLOR

class "{abstract}\nCommand" as Command
class "{abstract}\nDeleteCommand" as DeleteCommand
class DeleteClientCommand
class DeleteTransactionCommand
class DeleteRemarkCommand

DeleteCommand -up-|> Command
DeleteCommand <|-- DeleteClientCommand
DeleteCommand <|-- DeleteTransactionCommand
DeleteCommand <|-- DeleteRemarkCommand
@enduml
